--- a/programs.cfg
+++ b/programs.cfg
@@ -4,6 +4,7 @@
         ["repo"] = "tree/master",
         ["dependencies"] = {
             ["plan9k-doc-core"] = "/",
+            ["plan9k-man"] = "/",
         },
         ["name"] = "Plan9k docs metapackage",
         ["description"] = "Plan9k Documentation metapackage",
