Move man viewer to OP repo

--- a/programs.cfg
+++ b/programs.cfg
@@ -17,8 +17,19 @@
         },
         ["repo"] = "tree/master/plan9k-doc-core",
         ["dependencies"] = {},
-        ["name"] = "Plan9k docs metapackage",
-        ["description"] = "Plan9k Documentation metapackage",
+        ["name"] = "Plan9k core docs",
+        ["description"] = "Plan9k core documentation",
+        ["authors"] = "Magik6k",
+        ["version"] = "1.0"
+    },
+    ["plan9k-man"] = {
+        ["files"] = {
+          ["master/plan9k-man/man.lua"] = "/bin",
+        },
+        ["repo"] = "tree/master/plan9k-doc-core",
+        ["dependencies"] = {},
+        ["name"] = "Plan9k man",
+        ["description"] = "Plan9k documentation viewer",
         ["authors"] = "Magik6k",
         ["version"] = "1.0"
     },
