MPT-move plan9k-man

--- a/programs.cfg
+++ b/programs.cfg
@@ -31,6 +31,7 @@
         ["name"] = "Plan9k man",
         ["description"] = "Plan9k documentation viewer",
         ["authors"] = "Magik6k",
-        ["version"] = "1.0"
+        ["version"] = "1.0",
+        ["mpt-move"] = true
     },
 }
