--- a/programs.cfg
+++ b/programs.cfg
@@ -34,4 +34,22 @@
         ["version"] = "1.0",
         ["mpt-move"] = true
     },
+    ["plan9k-data"] = {
+        ["files"] = {
+          ["master/plan9k-data/base64.lua"] = "/bin/base64.lua"
+          ["master/plan9k-data/deflate.lua"] = "/bin/deflate.lua"
+          ["master/plan9k-data/gpg.lua"] = "/bin/gpg.lua"
+          ["master/plan9k-data/inflate.lua"] = "/bin/inflate.lua"
+          ["master/plan9k-data/md5sum.lua"] = "/bin/md5sum.lua"
+          ["master/plan9k-data/sha256sum.lua"] = "/bin/sha256sum.lua"
+        },
+        ["repo"] = "tree/master/plan9k-doc-core",
+        ["dependencies"] = {},
+        ["name"] = "Plan9k datacard utils",
+        ["description"] = "Plan9k datacard utilities",
+        ["authors"] = "Magik6k",
+        ["version"] = "1.0",
+        ["mpt-move"] = true
+    },
+    
 }
