--- a/programs.cfg
+++ b/programs.cfg
@@ -36,11 +36,11 @@
     },
     ["plan9k-data"] = {
         ["files"] = {
-          ["master/plan9k-data/base64.lua"] = "/bin/base64.lua"
-          ["master/plan9k-data/deflate.lua"] = "/bin/deflate.lua"
-          ["master/plan9k-data/gpg.lua"] = "/bin/gpg.lua"
-          ["master/plan9k-data/inflate.lua"] = "/bin/inflate.lua"
-          ["master/plan9k-data/md5sum.lua"] = "/bin/md5sum.lua"
+          ["master/plan9k-data/base64.lua"] = "/bin/base64.lua",
+          ["master/plan9k-data/deflate.lua"] = "/bin/deflate.lua",
+          ["master/plan9k-data/gpg.lua"] = "/bin/gpg.lua",
+          ["master/plan9k-data/inflate.lua"] = "/bin/inflate.lua",
+          ["master/plan9k-data/md5sum.lua"] = "/bin/md5sum.lua",
           ["master/plan9k-data/sha256sum.lua"] = "/bin/sha256sum.lua"
         },
         ["repo"] = "tree/master/plan9k-doc-core",
