Move containers and MrFS

--- a/programs.cfg
+++ b/programs.cfg
@@ -26,7 +26,7 @@
         ["files"] = {
           ["master/plan9k-man/man.lua"] = "/bin",
         },
-        ["repo"] = "tree/master/plan9k-doc-core",
+        ["repo"] = "tree/master/plan9k-man",
         ["dependencies"] = {},
         ["name"] = "Plan9k man",
         ["description"] = "Plan9k documentation viewer",
@@ -43,12 +43,38 @@
           ["master/plan9k-data/md5sum.lua"] = "/bin/md5sum.lua",
           ["master/plan9k-data/sha256sum.lua"] = "/bin/sha256sum.lua"
         },
-        ["repo"] = "tree/master/plan9k-doc-core",
+        ["repo"] = "tree/master/plan9k-data",
         ["dependencies"] = {},
         ["name"] = "Plan9k datacard utils",
         ["description"] = "Plan9k datacard utilities",
         ["authors"] = "Magik6k",
         ["version"] = "1.0",
         ["mpt-move"] = true
-    }
+    },
+    ["plan9k-containers"] = {
+        ["files"] = {
+          ["master/plan9k-containers/sandbox.lua"] = "//bin",
+        },
+        ["repo"] = "tree/master/plan9k-containers",
+        ["dependencies"] = {},
+        ["name"] = "Plan9k containers",
+        ["description"] = "Plan9k containers and sandboxing",
+        ["authors"] = "Magik6k",
+        ["version"] = "1.0",
+        ["mpt-move"] = true
+    },
+    ["mrfs"] = {
+        ["files"] = {
+          ["master/mrfs/09_mrfs.lua"] = "//lib/modules/base",
+          ["master/mrfs/mkfs.mrfs.lua"] = "/bin",
+        },
+        ["repo"] = "tree/master/mrfs",
+        ["dependencies"] = {},
+        ["name"] = "MrFS",
+        ["description"] = "MrFS Filesystem (WIP)",
+        ["authors"] = "Magik6k",
+        ["version"] = "0.0.0.0.1",
+        ["mpt-move"] = true
+    },
+    
 }
