Move pipes to OP

--- a/programs.cfg
+++ b/programs.cfg
@@ -1,80 +1,118 @@
 {
   ["plan9k-docs"] = {
-        ["files"] = {},
-        ["repo"] = "tree/master",
-        ["dependencies"] = {
-            ["plan9k-doc-core"] = "/",
-            ["plan9k-man"] = "/",
-        },
-        ["name"] = "Plan9k docs metapackage",
-        ["description"] = "Plan9k Documentation metapackage",
-        ["authors"] = "Magik6k",
-        ["version"] = "1.0"
+    ["files"] = {},
+    ["repo"] = "tree/master",
+    ["dependencies"] = {
+      ["plan9k-doc-core"] = "/",
+      ["plan9k-man"] = "/",
     },
-    ["plan9k-doc-core"] = {
-        ["files"] = {
-          ["master/plan9k-doc-core/plan9k.md"] = "/share/man",
-        },
-        ["repo"] = "tree/master/plan9k-doc-core",
-        ["dependencies"] = {},
-        ["name"] = "Plan9k core docs",
-        ["description"] = "Plan9k core documentation",
-        ["authors"] = "Magik6k",
-        ["version"] = "1.0"
+    ["name"] = "Plan9k docs metapackage",
+    ["description"] = "Plan9k Documentation metapackage",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0"
+  },
+  ["plan9k-doc-core"] = {
+    ["files"] = {
+      ["master/plan9k-doc-core/plan9k.md"] = "/share/man",
     },
-    ["plan9k-man"] = {
-        ["files"] = {
-          ["master/plan9k-man/man.lua"] = "/bin",
-        },
-        ["repo"] = "tree/master/plan9k-man",
-        ["dependencies"] = {},
-        ["name"] = "Plan9k man",
-        ["description"] = "Plan9k documentation viewer",
-        ["authors"] = "Magik6k",
-        ["version"] = "1.0",
-        ["mpt-move"] = true
+    ["repo"] = "tree/master/plan9k-doc-core",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k core docs",
+    ["description"] = "Plan9k core documentation",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0"
+  },
+  ["plan9k-man"] = {
+    ["files"] = {
+      ["master/plan9k-man/man.lua"] = "/bin",
     },
-    ["plan9k-data"] = {
-        ["files"] = {
-          ["master/plan9k-data/base64.lua"] = "/bin/base64.lua",
-          ["master/plan9k-data/deflate.lua"] = "/bin/deflate.lua",
-          ["master/plan9k-data/gpg.lua"] = "/bin/gpg.lua",
-          ["master/plan9k-data/inflate.lua"] = "/bin/inflate.lua",
-          ["master/plan9k-data/md5sum.lua"] = "/bin/md5sum.lua",
-          ["master/plan9k-data/sha256sum.lua"] = "/bin/sha256sum.lua"
-        },
-        ["repo"] = "tree/master/plan9k-data",
-        ["dependencies"] = {},
-        ["name"] = "Plan9k datacard utils",
-        ["description"] = "Plan9k datacard utilities",
-        ["authors"] = "Magik6k",
-        ["version"] = "1.0",
-        ["mpt-move"] = true
+    ["repo"] = "tree/master/plan9k-man",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k man",
+    ["description"] = "Plan9k documentation viewer",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-data"] = {
+    ["files"] = {
+      ["master/plan9k-data/base64.lua"] = "/bin/base64.lua",
+      ["master/plan9k-data/deflate.lua"] = "/bin/deflate.lua",
+      ["master/plan9k-data/gpg.lua"] = "/bin/gpg.lua",
+      ["master/plan9k-data/inflate.lua"] = "/bin/inflate.lua",
+      ["master/plan9k-data/md5sum.lua"] = "/bin/md5sum.lua",
+      ["master/plan9k-data/sha256sum.lua"] = "/bin/sha256sum.lua"
     },
-    ["plan9k-containers"] = {
-        ["files"] = {
-          ["master/plan9k-containers/sandbox.lua"] = "//bin",
-        },
-        ["repo"] = "tree/master/plan9k-containers",
-        ["dependencies"] = {},
-        ["name"] = "Plan9k containers",
-        ["description"] = "Plan9k containers and sandboxing",
-        ["authors"] = "Magik6k",
-        ["version"] = "1.0",
-        ["mpt-move"] = true
+    ["repo"] = "tree/master/plan9k-data",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k datacard utils",
+    ["description"] = "Plan9k datacard utilities",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-containers"] = {
+    ["files"] = {
+      ["master/plan9k-containers/sandbox.lua"] = "//bin",
     },
-    ["mrfs"] = {
-        ["files"] = {
-          ["master/mrfs/09_mrfs.lua"] = "//lib/modules/base",
-          ["master/mrfs/mkfs.mrfs.lua"] = "/bin",
-        },
-        ["repo"] = "tree/master/mrfs",
-        ["dependencies"] = {},
-        ["name"] = "MrFS",
-        ["description"] = "MrFS Filesystem (WIP)",
-        ["authors"] = "Magik6k",
-        ["version"] = "0.0.0.0.1",
-        ["mpt-move"] = true
+    ["repo"] = "tree/master/plan9k-containers",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k containers",
+    ["description"] = "Plan9k containers and sandboxing",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["mrfs"] = {
+    ["files"] = {
+      ["master/mrfs/09_mrfs.lua"] = "//lib/modules/base",
+      ["master/mrfs/mkfs.mrfs.lua"] = "/bin",
     },
-    
+    ["repo"] = "tree/master/mrfs",
+    ["dependencies"] = {},
+    ["name"] = "MrFS",
+    ["description"] = "MrFS Filesystem (WIP)",
+    ["authors"] = "Magik6k",
+    ["version"] = "0.0.0.0.1",
+    ["mpt-move"] = true
+  },
+  ["pipes"] = {
+    ["files"] = {
+      ["master/pipes/10_sysfs.lua"] = "//lib/modules/base",
+      ["master/pipes/15_userspace.lua"] = "//lib/modules/base",
+      ["master/pipes/11_block.lua"] = "//lib/modules/base",
+      ["master/pipes/21_threadUtil.lua"] = "//lib/modules/base",
+      ["master/pipes/16_component.lua"] = "//lib/modules/base",
+      ["master/pipes/17_ipc.lua"] = "//lib/modules/base",
+      ["master/pipes/17_io.lua"] = "//lib/modules/base",
+      ["master/pipes/10_procfs.lua"] = "//lib/modules/base",
+      ["master/pipes/18_pty.lua"] = "//lib/modules/base",
+      ["master/pipes/10_devfs.lua"] = "//lib/modules/base",
+      ["master/pipes/19_cgroups.lua"] = "//lib/modules/base",
+      ["master/pipes/05_vfs.lua"] = "//lib/modules/base",
+      ["master/pipes/01_gc.lua"] = "//lib/modules/base",
+      ["master/pipes/25_init.lua"] = "//lib/modules/base",
+      ["master/pipes/15_keventd.lua"] = "//lib/modules/base",
+      ["master/pipes/18_syscall.lua"] = "//lib/modules/base",
+      ["master/pipes/06_cowfs.lua"] = "//lib/modules/base",
+      ["master/pipes/02_cmd.lua"] = "//lib/modules/base",
+      ["master/pipes/09_rootfs.lua"] = "//lib/modules/base",
+      ["master/pipes/21_timer.lua"] = "//lib/modules/base",
+      ["master/pipes/17_keyboard.lua"] = "//lib/modules/base",
+      ["master/pipes/16_buffer.lua"] = "//lib/modules/base",
+      ["master/pipes/19_manageg.lua"] = "//lib/modules/base",
+      ["master/pipes/16_require.lua"] = "//lib/modules/base",
+      ["master/pipes/20_threading.lua"] = "//lib/modules/base",
+      ["master/pipes/01_util.lua"] = "//lib/modules/base",
+      ["master/pipes/pipes"] = "//boot/kernel"
+    },
+    ["repo"] = "tree/master/pipes",
+    ["dependencies"] = {},
+    ["name"] = "Pipes kernel",
+    ["description"] = "Pipes multitasking kernel",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  }
+
 }
