--- a/programs.cfg
+++ b/programs.cfg
@@ -107,12 +107,23 @@
       ["master/pipes/pipes"] = "//boot/kernel"
     },
     ["repo"] = "tree/master/pipes",
-    ["dependencies"] = {},
+    ["dependencies"] = {"openloader-init"},
     ["name"] = "Pipes kernel",
     ["description"] = "Pipes multitasking kernel",
     ["authors"] = "Magik6k",
     ["version"] = "1.0",
     ["mpt-move"] = true
-  }
-
+  },
+  ["openloader-init"] = {
+    ["files"] = {
+      ["master/openloader-init/init.lua"] = "//",
+    },
+    ["repo"] = "tree/master/openloader-init",
+    ["dependencies"] = {},
+    ["name"] = "OpenLoader as init",
+    ["description"] = "OpenLoader as init.lua",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
 }
