--- a/programs.cfg
+++ b/programs.cfg
@@ -107,7 +107,7 @@
       ["master/pipes/pipes"] = "//boot/kernel"
     },
     ["repo"] = "tree/master/pipes",
-    ["dependencies"] = {"openloader-init"},
+    ["dependencies"] = {["openloader-init"] = "/"},
     ["name"] = "Pipes kernel",
     ["description"] = "Pipes multitasking kernel",
     ["authors"] = "Magik6k",
