Move plan9k core to OP

--- a/programs.cfg
+++ b/programs.cfg
@@ -126,4 +126,115 @@
     ["version"] = "1.0",
     ["mpt-move"] = true
   },
+  ["plan9k-corelibs"] = {
+    ["files"] = {
+      ["master/plan9k-corelibs/colors.lua"] = "//lib",
+      ["master/plan9k-corelibs/event.lua"] = "//lib",
+      ["master/plan9k-corelibs/serialization.lua"] = "//lib",
+      ["master/plan9k-corelibs/shell.lua"] = "//lib",
+      ["master/plan9k-corelibs/sides.lua"] = "//lib",
+      ["master/plan9k-corelibs/term.lua"] = "//lib",
+      ["master/plan9k-corelibs/text.lua"] = "//lib"
+    },
+    ["repo"] = "tree/master/plan9k-corelibs",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k corelibs",
+    ["description"] = "Plan9k Core libraries",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-coreutil"] = {
+    ["files"] = {
+      ["master/plan9k-coreutil/clear.lua"] = "//bin",
+      ["master/plan9k-coreutil/components.lua"] = "//bin",
+      ["master/plan9k-coreutil/dmesg.lua"] = "//bin",
+      ["master/plan9k-coreutil/echo.lua"] = "//bin",
+      ["master/plan9k-coreutil/hostname.lua"] = "//bin",
+      ["master/plan9k-coreutil/kill.lua"] = "//bin",
+      ["master/plan9k-coreutil/label.lua"] = "//bin",
+      ["master/plan9k-coreutil/lua.lua"] = "//bin",
+      ["master/plan9k-coreutil/passwd.lua"] = "//bin",
+      ["master/plan9k-coreutil/ps.lua"] = "//bin",
+      ["master/plan9k-coreutil/reboot.lua"] = "//bin",
+      ["master/plan9k-coreutil/resolution.lua"] = "//bin",
+      ["master/plan9k-coreutil/shutdown.lua"] = "//bin",
+      ["master/plan9k-coreutil/sleep.lua"] = "//bin",
+      ["master/plan9k-coreutil/uptime.lua"] = "//bin",
+      ["master/plan9k-coreutil/watch.lua"] = "//bin",
+      ["master/plan9k-coreutil/wc.lua"] = "//bin"
+    },
+    ["repo"] = "tree/master/plan9k-coreutil",
+    ["dependencies"] = {
+      ["plan9k-corelibs"] = "/",
+      ["plan9k-fsutil"] = "/"
+    },
+    ["name"] = "Plan9k core utilities",
+    ["description"] = "Plan9k Core utilities",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-fsutil"] = {
+    ["files"] = {
+      ["master/plan9k-fsutil/df.lua"] = "//bin",
+      ["master/plan9k-fsutil/mount.lua"] = "//bin",
+      ["master/plan9k-fsutil/mount.cow.lua"] = "//bin",
+      ["master/plan9k-fsutil/more.lua"] = "//bin",
+      ["master/plan9k-fsutil/tee.lua"] = "//bin",
+      ["master/plan9k-fsutil/cp.lua"] = "//bin",
+      ["master/plan9k-fsutil/dd.lua"] = "//bin",
+      ["master/plan9k-fsutil/touch.lua"] = "//bin",
+      ["master/plan9k-fsutil/rm.lua"] = "//bin",
+      ["master/plan9k-fsutil/pwd.lua"] = "//bin",
+      ["master/plan9k-fsutil/ln.lua"] = "//bin",
+      ["master/plan9k-fsutil/cat.lua"] = "//bin",
+      ["master/plan9k-fsutil/mkdir.lua"] = "//bin",
+      ["master/plan9k-fsutil/find.lua"] = "//bin",
+      ["master/plan9k-fsutil/ls.lua"] = "//bin",
+      ["master/plan9k-fsutil/mv.lua"] = "//bin",
+      ["master/plan9k-fsutil/du.lua"] = "//bin"
+    },
+    ["repo"] = "tree/master/plan9k-fsutil",
+    ["dependencies"] = {
+      ["plan9k-corelibs"] = "/"
+    },
+    ["name"] = "Plan9k filesystem utilities",
+    ["description"] = "Plan9k filesystem utilities",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-core"] = {
+    ["files"] = {
+      ["master/plan9k-core/bin/rc.lua"] = "//bin",
+      ["master/plan9k-core/bin/getty.lua"] = "//bin",
+      ["master/plan9k-core/bin/readkey.lua"] = "//bin",
+      ["master/plan9k-core/bin/init.lua"] = "//bin",
+      ["master/plan9k-core/lib/rc.lua"] = "//lib"
+    },
+    ["repo"] = "tree/master/plan9k-core",
+    ["dependencies"] = {
+      ["pipes"] = "/",
+      ["plan9k-coreutil"] = "/",
+      ["plan9k-shell"] = "/",
+    },
+    ["name"] = "Plan9k system core",
+    ["description"] = "Plan9k system core",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-shell"] = {
+    ["files"] = {
+      ["master/plan9k-shell/bin/sh.lua"] = "//bin",
+    },
+    ["repo"] = "tree/master/plan9k-shell",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k shell",
+    ["description"] = "Plan9k shell",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  }
 }
