--- a/programs.cfg
+++ b/programs.cfg
@@ -227,7 +227,7 @@
   },
   ["plan9k-shell"] = {
     ["files"] = {
-      ["master/plan9k-shell/bin/sh.lua"] = "//bin",
+      ["master/plan9k-shell/sh.lua"] = "//bin",
     },
     ["repo"] = "tree/master/plan9k-shell",
     ["dependencies"] = {},
