Move most of base install to OP

--- a/programs.cfg
+++ b/programs.cfg
@@ -236,5 +236,130 @@
     ["authors"] = "Magik6k",
     ["version"] = "1.0",
     ["mpt-move"] = true
+  },
+  ["plan9k-installer"] = {
+    ["files"] = {
+      ["master/plan9k-installer/install.lua"] = "//bin",
+    },
+    ["repo"] = "tree/master/plan9k-installer",
+    ["dependencies"] = {
+      ["plan9k"] = "/",
+      ["mpt"] = "/",
+      ["plan9k-extra"] = "/",
+    },
+    ["name"] = "Plan9k installer",
+    ["description"] = "Plan9k installer",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-edit"] = {
+    ["files"] = {
+      ["master/plan9k-edit/edit.lua"] = "//bin",
+    },
+    ["repo"] = "tree/master/plan9k-installer",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k text editor",
+    ["description"] = "Plan9k text editor",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-network"] = {
+    ["files"] = {
+      ["master/plan9k-network/wget.lua"] = "//bin",
+      ["master/plan9k-network/pastebin.lua"] = "//bin",
+      ["master/plan9k-network/internet.lua"] = "//lib",
+    },
+    ["repo"] = "tree/master/plan9k-network",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k internet utils",
+    ["description"] = "Plan9k internet utils",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-drivers"] = {
+    ["files"] = {
+      ["master/plan9k-drivers/17_data.lua"] = "//lib/modules/base",
+      ["master/plan9k-drivers/12_mount.lua"] = "//lib/modules/base",
+      ["master/plan9k-drivers/17_eeprom.lua"] = "//lib/modules/base",
+      ["master/plan9k-drivers/17_chatbox.lua"] = "//lib/modules/base",
+      ["master/plan9k-drivers/17_gpt.lua"] = "//lib/modules/base",
+      ["master/plan9k-drivers/16_partition.lua"] = "//lib/modules/base",
+      ["master/plan9k-drivers/17_tape.lua"] = "//lib/modules/base",
+      ["master/plan9k-drivers/17_drive.lua"] = "//lib/modules/base",
+      ["master/plan9k-drivers/17_nfc.lua"] = "//lib/modules/base"
+    },
+    ["repo"] = "tree/master/plan9k-dirvers",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k device drivers",
+    ["description"] = "Plan9k device drivers",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k"] = {
+    ["files"] = {
+      ["master/plan9k/.prop"] = "//",
+    },
+    ["repo"] = "tree/master",
+    ["dependencies"] = {
+      ["plan9k-core"] = "/",
+      ["plan9k-network"] = "/",
+      ["plan9k-drivers"] = "/",
+      ["plan9k-edit"] = "/",
+      ["plan9k-data"] = "/"
+    },
+    ["name"] = "Plan9k metapackage",
+    ["description"] = "Plan9k operating system metapackage",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0"
+  },
+  ["plan9k-ssh"] = {
+    ["files"] = {
+      ["master/plan9k-ssh/sshd.lua"] = "//bin",
+      ["master/plan9k-ssh/ssh.lua"] = "/bin",
+      ["master/plan9k-ssh/sshsession.lua"] = "/sbin",
+      ["master/plan9k-ssh/rc.d/sshd.lua"] = "//etc/rc.d"
+    },
+    ["repo"] = "tree/master/plan9k-ssh",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k SSH",
+    ["description"] = "Plan9k SSH (not implementing real protocol)",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0"
+  },
+  ["plan9k-filesystems"] = {
+    ["files"] = {
+      ["master/plan9k-filesystems/mount.msdos.lua"] = "//bin",
+      ["master/plan9k-filesystems/mkdosfs.lua"] = "/bin",
+      ["master/plan9k-filesystems/msdosfs.lua"] = "//lib"
+    },
+    ["repo"] = "tree/master/plan9k-filesystems",
+    ["dependencies"] = {},
+    ["name"] = "Plan9k filesystems",
+    ["description"] = "Plan9k blockdevice filesystems",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0"
+  },
+  ["plan9k-extra"] = {
+    ["files"] = {
+      ["master/plan9k-extra/robot.lua"] = "/lib",
+      ["master/plan9k-extra/go.lua"] = "/bin",
+      ["master/plan9k-extra/autoupdate.lua"] = "//etc/rc.d"
+    },
+    ["repo"] = "tree/master",
+    ["dependencies"] = {
+      ["plan9k"] = "/",
+      ["plan9k-ssh"] = "/",
+      ["plan9k-containers"] = "/",
+      ["plan9k-filesystems"] = "/",
+      ["mpt"] = "/",
+    },
+    ["name"] = "Full Plan9k Distro",
+    ["description"] = "Plan9k distribution with more default programs",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0"
   }
 }
