Move IP related stuff

--- a/programs.cfg
+++ b/programs.cfg
@@ -314,7 +314,8 @@
     ["name"] = "Plan9k metapackage",
     ["description"] = "Plan9k operating system metapackage",
     ["authors"] = "Magik6k",
-    ["version"] = "1.0"
+    ["version"] = "1.0",
+    ["mpt-move"] = true
   },
   ["plan9k-ssh"] = {
     ["files"] = {
@@ -328,7 +329,8 @@
     ["name"] = "Plan9k SSH",
     ["description"] = "Plan9k SSH (not implementing real protocol)",
     ["authors"] = "Magik6k",
-    ["version"] = "1.0"
+    ["version"] = "1.0",
+    ["mpt-move"] = true
   },
   ["plan9k-filesystems"] = {
     ["files"] = {
@@ -341,7 +343,8 @@
     ["name"] = "Plan9k filesystems",
     ["description"] = "Plan9k blockdevice filesystems",
     ["authors"] = "Magik6k",
-    ["version"] = "1.0"
+    ["version"] = "1.0",
+    ["mpt-move"] = true
   },
   ["plan9k-extra"] = {
     ["files"] = {
@@ -360,6 +363,77 @@
     ["name"] = "Full Plan9k Distro",
     ["description"] = "Plan9k distribution with more default programs",
     ["authors"] = "Magik6k",
-    ["version"] = "1.0"
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-ip"] = {
+    ["files"] = {
+      ["master/plan9k-ip/02_ringbuffer.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/11_interface.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/12_ip.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/13_gateway.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/13_ocnet.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/13_router.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/14_linked.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/14_tcpudp.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/17_network.lua"] = "//lib/modules/base",
+      ["master/plan9k-ip/ip.lua"] = "//bin",
+      ["master/plan9k-ip/nc.lua"] = "/bin",
+      ["master/plan9k-ip/ping.lua"] = "//bin",
+      ["master/plan9k-ip/netctl.lua"] = "//etc/rc.d"
+    },
+    ["repo"] = "tree/master/plan9k-ip",
+    ["dependencies"] = {},
+    ["name"] = "IP for Plan9k",
+    ["description"] = "Plan9k InternetProtocol(IPv4) stack",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-ohcp"] = {
+    ["files"] = {
+      ["master/plan9k-ohcp/14_ohcp.lua"] = "//lib/modules/base",
+      ["master/plan9k-ohcp/ohcpd.lua"] = "//bin",
+      ["master/plan9k-ohcp/ohcp.lua"] = "//etc/rc.d"
+    },
+    ["repo"] = "tree/master/plan9k-ohcp",
+    ["dependencies"] = {
+      ["plan9k-ip"] = "/",
+    },
+    ["name"] = "OHCP for Plan9k",
+    ["description"] = "OHCP(DHCP) client module for Plan9k",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["plan9k-ohcp-server"] = {
+    ["files"] = {
+      ["master/plan9k-ohcp-server/13_ohcpSrv.lua"] = "//lib/modules/base",
+      ["master/plan9k-ohcp/ohcpd.lua"] = "//etc/rc.d"
+    },
+    ["repo"] = "tree/master/plan9k-ohcp-server",
+    ["dependencies"] = {
+      ["plan9k-ohcp"] = "/",
+    },
+    ["name"] = "OHCP for Plan9k",
+    ["description"] = "OHCP(DHCP) server module for Plan9k",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
+  },
+  ["routed"] = {
+    ["files"] = {
+      ["master/routed/rc.d/routed.lua"] = "//etc/rc.d",
+      ["master/routed/routed.lua"] = "/bin"
+    },
+    ["repo"] = "tree/master/routed",
+    ["dependencies"] = {
+      ["plan9k-ip"] = "/",
+    },
+    ["name"] = "RIPv2 implementation",
+    ["description"] = "RIPv2 routing protocol implementation",
+    ["authors"] = "Magik6k",
+    ["version"] = "1.0",
+    ["mpt-move"] = true
   }
 }
